--- a/notebooks/GPS_Footprinting.Rmd
+++ b/notebooks/GPS_Footprinting.Rmd
@@ -7,11 +7,6 @@ output:
     toc: yes
     toc_float:
       toc_collapsed: yes
-  html_document:
-    df_print: paged
-    toc: yes
-editor_options: 
-  chunk_output_type: inline
 ---
 `r Sys.time()`
 
@@ -29,7 +24,7 @@ This *GPS Footprinting project* is inspired by [Finn et al. Nat Neuro  (2015)](h
 GPS data preprocessing was performed according to [Ian Barnett's imputation algorithm](https://github.com/ianjamesbarnett/SmartphoneSensorPipeline), originally published in [Biostatistics (2020)](https://academic.oup.com/biostatistics/article-abstract/21/2/e98/5145908).
 
 ### 1. Setup Environment 
-```{r load_lib, message=FALSE}
+```{r load libraries, message=FALSE}
 require(ggplot2)
 require(summarytools)
 require(cowplot)
@@ -40,11 +35,17 @@ require(vembedr)
 require(Rmisc)
 require(varian)
 require(patchwork)
+require(plotly)
+require(Metrics)
+require(dplyr)
+require(ggpubr)
+require(mosaic)
+require(openxlsx)
 source('~/Documents/GitHub/SmartphoneSensorPipeline/Extra/plotting_functions.R')
 ```
 
 
-```{r def_paths}
+```{r define paths}
 project_path = "~/Documents/xia_gps/"
 data_path = file.path(project_path,"beiwe_output_043020")
 gps_df_path = file.path(data_path,"Processed_Data/Group/feature_matrix.txt")
@@ -139,6 +140,20 @@ ggplotly(p)
 ```
 **Figure 5: A Zoom-in plot of minutes missing distribution after removing days with all data missing.** There are `r dim(gps_df_clean2)[1]` total days. Dashlines indicate the corresponding percentile.
 
+```{r investigate individual data quality, fig.align="center", message=FALSE, warning=FALSE}
+subj_minmissing = gps_df_clean2 %>% group_by(IID) %>% summarise(mean = mean(MinsMissing), n = n())
+
+subj_minmissing_plot = ggplot(subj_minmissing) + 
+  geom_point(aes(x = reorder(IID, mean), y = (1440-mean)/(1440-1296))) + 
+   theme_cowplot() + 
+  labs(title = "Data Completeness by Subject",part_times,"Data Partitions", 
+  x = "Subjects", y = "Data Completeness") + scale_y_continuous(labels = scales::percent, limits=c(0,1)) +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1, size = 8), plot.title = element_text(hjust = 0.5))
+ggplotly(subj_minmissing_plot)
+```
+
+
+
 ### 4. Random Data Partitions
 
 To operationalize individual footprinting prediction, we randomly split each individual's available GPS data to two half partitions for `r part_times` times. We used the features from the first half to determine if we can identify the same individual using their data in the second unseen half. Again, to avoid any (un)lucky random splits, we repeated data partition `r part_times` times.
@@ -189,6 +204,29 @@ make_feature_matrix = function(gps_df, subj_seq) {
 gps_clean2_feature = make_feature_matrix(gps_df_clean2)
 ```
 
+```{r visualization of feature correlations across subjects}
+gps_wide_matrix = data.frame()
+
+for (subj in arrange(subj_days,`Days Collected`)$IID){
+  #if ((subj %in% subj_days$IID[which(subj_days$`Days Collected`<=10)]) == T) {
+  if (subj != ids[ids$BBLID == "21059",'beiweID']) {
+    for (part in 1:1){
+      half_1 = gps_clean2_feature$subj_mat_1[[subj]][[part]]$cor
+      half_2 = gps_clean2_feature$subj_mat_2[[subj]][[part]]$cor
+      half_1_half_2 = c(half_1,half_2)
+      gps_wide_matrix = rbind(gps_wide_matrix,half_1_half_2)
+      }
+    #}
+  }
+}
+
+gps_wide_matrix = t(gps_wide_matrix)
+gps_corplot = rquery.cormat(gps_wide_matrix, type = "full",graph=FALSE)
+gps_corplot$subj = arrange(subj_days,`Days Collected`)$IID
+
+levelplot(gps_corplot$r,scales=list(draw=FALSE),col.regions = rev(rainbow(1000))[-c(1:20)], region =T, ylab.right = "Pearson correlation", main=list(label='GPS Feature Similarity'),xlab="",ylab="")
+```
+
 ### 6. Match Target
 
 Next we tried to match each target, defined by one subject's feature matrix in the first half, to a feature matrix in the second half in the same random split. If the same individual's feature matrix in the second half had the highest correlation among all subjects, then we assigned the match result 1, indicating a succussful match, otherwise 0, indicating an unsccussful match.
@@ -230,13 +268,19 @@ match_cor = calc_match_cor(subj_mat_1,subj_mat_2)
 By tallying up all the successful and unsuccessful matchs in each of the `r part_times` random splits, we calculated a distribution of match accuracy.
 
 ```{r calc accuracy by partition}
-calc_acc_time=function(match_cor,part_times) {
+calc_acc_time=function(match_cor,part_times, method = "max") {
   acc_time = array()
   for (time in 1:part_times){
     acc_time[time] = 0
     for (subj in names(subj_mat_1)){
-      max_position = which.max(unlist(match_cor[[subj]][[as.character(time)]]))
-      predicted_subj = names(subj_mat_1)[max_position]
+      if (method == "max"){
+        position = which.max(unlist(match_cor[[subj]][[as.character(time)]]))
+      } 
+      else if (method == "min"){
+        position = which.min(unlist(match_cor[[subj]][[as.character(time)]]))
+      }
+      
+      predicted_subj = names(subj_mat_1)[position]
       if (predicted_subj == subj) {
         acc_time[time] = acc_time[time] + 1
       }
@@ -258,13 +302,18 @@ ggplotly(p_time_cor)
 
 
 ```{r calc accuracy by subj}
-calc_acc_subj = function(match_cor, part_times){
+calc_acc_subj = function(match_cor, part_times, method = "max"){
   acc_subj = array()
   for (subj in names(subj_mat_1)){
     acc_subj[subj] = 0
     for (time in 1:part_times){
-      max_position = which.max(unlist(match_cor[[subj]][[as.character(time)]]))
-      predicted_subj = names(subj_mat_1)[max_position]
+      if (method == "max"){
+        position = which.max(unlist(match_cor[[subj]][[as.character(time)]]))
+      } 
+      else if (method == "min"){
+        position = which.min(unlist(match_cor[[subj]][[as.character(time)]]))
+      }
+      predicted_subj = names(subj_mat_1)[position]
       if (predicted_subj == subj) {
         acc_subj[subj] = acc_subj[subj] + 1
       }
@@ -454,7 +503,7 @@ Reduce(`+`, var_plots)
 
 ### 10. Predict with New Features 
 ```{r define match function for vector features}
-calc_match_vector = function(subj_mat_1,subj_mat_2) {
+calc_match_vector = function(subj_mat_1,subj_mat_2,method) {
   part_times = length(subj_mat_1[[1]])
   database = list() 
   for (time in 1:part_times) {
@@ -471,7 +520,12 @@ calc_match_vector = function(subj_mat_1,subj_mat_2) {
         target_subj_time = target_list[[time]] #loop through each partition
         for (subj2 in names(subj_mat_2)){ #loop everyone in 2nd half
           data_subj_time = subj_mat_2[[subj2]][[time]]
+          if (method == "cor") {
           match_cor[[subj1]][[as.character(time)]][[subj2]] = cor(target_subj_time,data_subj_time,use = "na.or.complete")
+          } 
+          else if (method == "rmse") {
+            match_cor[[subj1]][[as.character(time)]][[subj2]] = rmse(target_subj_time,data_subj_time)
+          }
         }
       }
     }
@@ -481,22 +535,31 @@ calc_match_vector = function(subj_mat_1,subj_mat_2) {
 
 
 ```{r calc match accuracy using mean features}
-match_mean = calc_match_vector(gps_clean2_mean_feat$subj_mat_1,gps_clean2_mean_feat$subj_mat_2)
-acc_time_mean = calc_acc_time(match_mean,part_times)
-acc_subj_mean = calc_acc_subj(match_mean, part_times)
+match_mean_rmse = calc_match_vector(gps_clean2_mean_feat$subj_mat_1,gps_clean2_mean_feat$subj_mat_2,"rmse")
+acc_time_mean_rmse = calc_acc_time(match_mean_rmse,part_times,"min")
+acc_subj_mean_rmse = calc_acc_subj(match_mean_rmse, part_times,"min")
+
+match_mean_cor = calc_match_vector(gps_clean2_mean_feat$subj_mat_1,gps_clean2_mean_feat$subj_mat_2,"cor")
+acc_time_mean_cor = calc_acc_time(match_mean_cor,part_times,"max")
+acc_subj_mean_cor = calc_acc_subj(match_mean_cor, part_times,"max")
 ```
 
 ```{r calc match accuracy using variability features}
-match_rmssd = calc_match_vector(gps_clean2_rmssd_feat$subj_mat_1,gps_clean2_rmssd_feat$subj_mat_2)
-acc_time_rmssd = calc_acc_time(match_rmssd,part_times)
-acc_subj_rmssd = calc_acc_subj(match_rmssd, part_times)
+match_rmssd_rmse = calc_match_vector(gps_clean2_rmssd_feat$subj_mat_1,gps_clean2_rmssd_feat$subj_mat_2, "rmse")
+acc_time_rmssd_rmse = calc_acc_time(match_rmssd_rmse,part_times, "min")
+acc_subj_rmssd_rmse = calc_acc_subj(match_rmssd_rmse, part_times, "min")
+
+
+match_rmssd_cor = calc_match_vector(gps_clean2_rmssd_feat$subj_mat_1,gps_clean2_rmssd_feat$subj_mat_2, "cor")
+acc_time_rmssd_cor = calc_acc_time(match_rmssd_cor,part_times, "max")
+acc_subj_rmssd_cor = calc_acc_subj(match_rmssd_cor, part_times, "max")
 ```
 
 ### 11. Permutation Tests with New Features 
 
 #### 11a. Average Accuracy
 ```{r define new permutation functions}
-perm_vector = function(gps_df, perm_time, method){
+perm_vector = function(gps_df, perm_time, method_feature, method_match){
   gps_df_perm = gps_df
   perm_acc_time = list()
   perm_acc_subj = list()
@@ -505,42 +568,74 @@ perm_vector = function(gps_df, perm_time, method){
     print(paste("processing ...", i,"..."))
     gps_df_perm$IID = sample(gps_df_perm$IID)
     perm_subj_seq = make_subj_seq(gps_df_perm,part_times = perm_part_times)
-    if (method == "rmssd") {
+    if (method_feature == "rmssd") {
       perm_gps = make_feature_rmssd(gps_df_perm,perm_subj_seq)
-    } else if (method == "mean"){
+    } else if (method_feature == "mean"){
       perm_gps = make_feature_mean(gps_df_perm,perm_subj_seq)
     }
     perm_mat_1 = perm_gps$subj_mat_1
     perm_mat_2 = perm_gps$subj_mat_2
-    perm_match_cor = calc_match_vector(perm_mat_1,perm_mat_2)
-    perm_acc_time[[i]] = calc_acc_time(perm_match_cor,part_times = perm_part_times)
-    perm_acc_subj[[i]] = calc_acc_subj(perm_match_cor,part_times = perm_part_times)
+    if (method_match == "cor") {
+      perm_match = calc_match_vector(perm_mat_1,perm_mat_2, "cor")
+      perm_acc_time[[i]] = calc_acc_time(perm_match,part_times = perm_part_times, "max")
+      perm_acc_subj[[i]] = calc_acc_subj(perm_match,part_times = perm_part_times, "max")
+    }
+    else if (method_match == "rmse"){
+      perm_match = calc_match_vector(perm_mat_1,perm_mat_2, "rmse")
+      perm_acc_time[[i]] = calc_acc_time(perm_match,part_times = perm_part_times, "min")
+      perm_acc_subj[[i]] = calc_acc_subj(perm_match,part_times = perm_part_times, "min")
+    }
+    
   }
   return(list(perm_acc_time= perm_acc_time,perm_acc_subj = perm_acc_subj))
 }
 ```
 
 
-```{r run permutation for mean features, fig.width= 6, message=FALSE}
-#perm_mean = perm_vector(gps_df_clean2, 1000, "mean")
+```{r run permutation for mean features match by cor, fig.width= 6, message=FALSE}
+perm_mean_cor = perm_vector(gps_df_clean2, 1000, "mean", "cor")
 
-p_time_mean = hist_chx(acc_time_mean, bins = 8, title = paste("Mean Features: \n Average Accuracy Across",length(acc_time_mean),"Data Partitions"), xaxis = "Prediction Accuracy", yaxis = "Count")
+p_time_mean_cor = hist_chx(acc_time_mean_cor, bins = 8, title = paste("Mean Features: \n Average Accuracy Across",length(acc_time_mean),"Data Partitions"), xaxis = "Prediction Accuracy", yaxis = "Count")
 
-q_time_mean =  hist_chx(unlist(perm_mean$perm_acc_time), bins = 8, title = paste("Mean Features: \n Average Accuracy Across",length(perm_mean$perm_acc_time),"Permutations"), xaxis = "Prediction Accuracy", yaxis = "Count")
+q_time_mean_cor =  hist_chx(unlist(perm_mean_cor$perm_acc_time), bins = 8, title = paste("Mean Features: \n Average Accuracy Across",length(perm_mean_cor$perm_acc_time),"Permutations"), xaxis = "Prediction Accuracy", yaxis = "Count")
 
-p_time_mean + q_time_mean
+p_time_mean_cor + q_time_mean_cor
 ```
+**Figure 11: Prediction accuracy using mean features and matched by max pearson correlation**.
 
+```{r run permutation for mean features match by rmse, fig.width= 6, message=FALSE}
+perm_mean_rmse = perm_vector(gps_df_clean2, 1000, "mean", "rmse")
 
-```{r run permutation for rmssd features, fig.width= 6, message=FALSE}
-#perm_rmssd = perm_vector(gps_df_clean2, 1000, "rmssd")
+p_time_mean_rmse = hist_chx(acc_time_mean_rmse, bins = 8, title = paste("Mean Features: \n Average Accuracy Across",length(acc_time_mean),"Data Partitions"), xaxis = "Prediction Accuracy", yaxis = "Count")
 
-p_time_rmssd = hist_chx(acc_time_rmssd, bins = 8, title = paste("RMSSD Features: \n Average Accuracy Across",length(acc_time_rmssd),"Data Partitions"), xaxis = "Prediction Accuracy", yaxis = "Count")
+q_time_mean_rmse =  hist_chx(unlist(perm_mean_rmse$perm_acc_time), bins = 8, title = paste("Mean Features: \n Average Accuracy Across",length(perm_mean_rmse$perm_acc_time),"Permutations"), xaxis = "Prediction Accuracy", yaxis = "Count")
 
-q_time_rmssd = hist_chx(unlist(perm_rmssd$perm_acc_time), bins = 8, title = paste("RMSSD Features: Average Accuracy Across",length(perm_mean$perm_acc_time),"Permutations"), xaxis = "Prediction Accuracy", yaxis = "Count")
-
-p_time_rmssd + q_time_rmssd
+p_time_mean_rmse + q_time_mean_rmse
 ```
+**Figure 11: Prediction accuracy using mean features and matched by min root mean squared**.
+
+
+```{r run permutation for rmssd features matched by cor, fig.width= 6, message=FALSE}
+perm_rmssd_cor = perm_vector(gps_df_clean2, 1000, "rmssd","cor")
+
+p_time_rmssd_cor = hist_chx(acc_time_rmssd_cor, bins = 8, title = paste("RMSSD Features: \n Average Accuracy Across",length(acc_time_rmssd_cor),"Data Partitions"), xaxis = "Prediction Accuracy", yaxis = "Count")
+
+q_time_rmssd_cor = hist_chx(unlist(perm_rmssd_cor$perm_acc_time), bins = 8, title = paste("RMSSD Features: Average Accuracy Across",length(perm_rmssd_cor$perm_acc_time_cor),"Permutations"), xaxis = "Prediction Accuracy", yaxis = "Count")
+
+p_time_rmssd_cor + q_time_rmssd_cor
+```
+**Figure 12: Prediction accuracy using RMSSD features and matched by max pearson correlation**.
+
+```{r run permutation for rmssd features matched by rmse, fig.width= 6, message=FALSE}
+perm_rmssd_rmse = perm_vector(gps_df_clean2, 1000, "rmssd","rmse")
+
+p_time_rmssd_rmse = hist_chx(acc_time_rmssd_rmse, bins = 8, title = paste("RMSSD Features: \n Average Accuracy Across",length(acc_time_rmssd_cor),"Data Partitions"), xaxis = "Prediction Accuracy", yaxis = "Count")
+
+q_time_rmssd_rmse = hist_chx(unlist(perm_rmssd_rmse$perm_acc_time), bins = 8, title = paste("RMSSD Features: Average Accuracy Across",length(perm_rmssd_rmse$perm_acc_time_cor),"Permutations"), xaxis = "Prediction Accuracy", yaxis = "Count")
+
+p_time_rmssd_rmse + q_time_rmssd_rmse
+```
+**Figure 13: Prediction accuracy using RMSSD features and matched by min root mean squared**.
 
 ```{r define combine perm subj functions}
 
@@ -573,33 +668,163 @@ subj_scatter_perm = function(gps_df,acc_subj,perm_subj, method){
 ```
 
 
-```{r mean features by subject with permutation}
+```{r mean features by subject with permutation, fig.width=8, fig.height=6}
 p_subj_mean = subj_scatter(gps_df_clean2, acc_subj_mean, "Mean")
 perm_subj_mean = combine_perm_subj(p_subj_mean,perm_mean$perm_acc_subj)
 p_subj_mean_perm = subj_scatter_perm(gps_df_clean2, acc_subj_mean, perm_subj_mean, "Mean")
 ggplotly(p_subj_mean_perm)
 ```
+**Figure 14: Subject level prediction accuracy using mean features and matched by max pearson correlation**.
 
-```{r rmssd features by subject with permutation}
+```{r rmssd features by subject with permutation, fig.width=8, fig.height=6}
 p_subj_rmssd = subj_scatter(gps_df_clean2, acc_subj_rmssd, "RMSSD")
 perm_subj_rmssd = combine_perm_subj(p_subj_rmssd,perm_rmssd$perm_acc_subj)
 p_subj_rmssd_perm = subj_scatter_perm(gps_df_clean2, acc_subj_rmssd, perm_subj_rmssd, "RMSSD")
 ggplotly(p_subj_rmssd_perm)
 ```
+**Figure 15: Subject level prediction accuracy using RMSSD features and matched by max pearson correlation**.
 
 
 ### 12. Compare Features
 ```{r compare across data partition, fig.width=8}
 p_time_cor + p_time_mean + p_time_rmssd
 ```
+**Figure 16: Prediction accuracy across three feature sets**.
 
 ```{r compare across subjects, fig.height=6, fig.width=4}
 p_subj_cor_perm / p_subj_mean_perm / p_subj_rmssd_perm
 ```
+**Figure 17: Subject level prediction accuracy across three feature sets**.
 
-### 13. Combine Features
 
-### 14. Misc Info
+### 13. Confounding variables
+```{r subj accuracy cor with potential confounders, fig.height=6, fig.width=7, wmessage=FALSE, warning=FALSE}
+conf_scatter_plot = function(conf_var, acc_subj, col){
+  if (!identical(conf_var$IID,names(acc_subj))) {
+    stop("subj names do not match")
+  }
+  conf_df = data.frame(conf = unlist(conf_var[,col]), acc_subj = acc_subj)
+  conf_scatter = ggscatter(conf_df, y = "acc_subj", x = "conf",
+   add = "reg.line",  # Add regressin line
+   add.params = list(color = "black", fill = "lightgray"), # Customize reg. line
+   conf.int = TRUE # Add confidence interval
+   ) + stat_cor(method = "pearson") +
+    theme_cowplot() + theme(plot.title = element_text(hjust = 0.5)) +
+    labs(title = paste(col), y = "Prediction Accuracy", x = col)
+  return(conf_scatter)
+  }
+
+subj_minmissing = gps_df_clean2 %>% group_by(IID) %>% summarise_if(is.numeric, mean, na.rm = TRUE)
+sp_plots = list()
+for (gps_ft in colnames(subj_minmissing)[-1]){
+  sp_plots[[gps_ft]] = conf_scatter_plot(subj_minmissing,acc_subj,gps_ft)
+}
+
+Reduce(`+`, sp_plots)
+```
+**Figure 18: Relationships between subject level prediction accuracy and individual features**. Notably, there was no relationship between individual data missingness and subject level prediction accuracy.
+
+
+```{r accuracy explained by data amount}
+subj_days = gps_df_clean2 %>% group_by(IID) %>% dplyr::tally(name = "Days Collected")
+conf_scatter_plot(subj_days, acc_subj, "Days Collected")
+```
+**Figure 19: Relationships between subject level prediction accuracy and data quantity**. 
+
+
+### 14. Combine Features
+```{r combine features}
+
+gps_clean2_combined_feat = list()
+for (subj in names(subj_mat_1)){
+  for (time in 1:part_times){
+    cor_feat1 = gps_clean2_feature$subj_mat_1[[subj]][[time]]$cor
+    mean_feat1 = gps_clean2_mean_feat$subj_mat_1[[subj]][[time]]
+    rmssd_feat1 = gps_clean2_rmssd_feat$subj_mat_1[[subj]][[time]]
+    
+    cor_feat2 = gps_clean2_feature$subj_mat_2[[subj]][[time]]$cor
+    mean_feat2 = gps_clean2_mean_feat$subj_mat_2[[subj]][[time]]
+    rmssd_feat2 = gps_clean2_rmssd_feat$subj_mat_2[[subj]][[time]]
+    
+    gps_clean2_combined_feat$subj_mat_1[[subj]][[time]] = c(cor_feat1, mean_feat1, rmssd_feat1)
+    gps_clean2_combined_feat$subj_mat_2[[subj]][[time]] = c(cor_feat2, mean_feat2, rmssd_feat2)
+  }
+}
+
+```
+
+```{r match with combined features, fig.align="center"}
+match_combined_feat = calc_match_vector(gps_clean2_combined_feat$subj_mat_1, gps_clean2_combined_feat$subj_mat_2)
+acc_time_cb  = calc_acc_time(match_combined_feat, part_times)
+acc_subj_cb  = calc_acc_subj(match_combined_feat, part_times)
+p = hist_chx(acc_time_cb, bins = 8, title = paste("Combined Features \n by data partition"), xaxis = "Prediction Accuracy", yaxis = "Count")
+q = hist_chx(acc_subj_cb, bins = 8, title = paste("Combined Features \n by subject"), xaxis = "Prediction Accuracy", yaxis = "Count")
+p + q
+```
+**Figure 20: Prediction accuracy when all three sets of features were combined**. 
+
+
+### 15. Associations with Psychopathology
+```{r psychopathology , fig.align = "center", fig.height=3, fig.width=6, message=FALSE, warning=FALSE}
+ids = read.xlsx(file.path(project_path,"data/clinical_data/subjecttracker_4.xlsx"))[1:length(unique(gps_df_clean2$IID)),]
+#psych_score = read.csv(file.path(project_path,"data/self_report_scored_20200128.csv"))
+# psych_pro = psych %>% filter(ari_proband_complete == 2)
+psych_item = read.csv(file.path(project_path,"data/clinical_data/self_report_itemwise.csv"))
+
+psych_beiwe = inner_join(ids,psych_item, by = c("BBLID" = "bblid"))
+acc_subj_df = data.frame(beiweID = names(acc_subj), acc = acc_subj)
+psych_beiwe_acc_subj = inner_join(acc_subj_df,psych_beiwe, by = "beiweID")
+
+
+psych_sum = psych_beiwe_acc_subj %>%
+            mutate(sum_als = rowSums(.[grep("^als_[0-9]$",colnames(psych_beiwe_acc_subj))], na.rm = T)) %>%
+            mutate(sum_ari = rowSums(.[grep("^ari_[0-9]$",colnames(psych_beiwe_acc_subj))], na.rm = T))
+
+psych_sum = inner_join(psych_sum, subj_days, by = c("beiweID" = "IID"))
+psych_sum$days = psych_sum$`Days Collected`
+psych_sp = function(psych_df,psych_var, xlab) {
+ sp = ggscatter(psych_df, y = psych_var, x = "acc",
+   add = "reg.line",  # Add regressin line
+   add.params = list(color = "black", fill = "lightgray"), # Customize reg. line
+   conf.int = TRUE # Add confidence interval
+   ) + stat_cor(method = "pearson") +
+    theme_cowplot() + theme(plot.title = element_text(hjust = 0.5)) +
+    labs(x = "Prediction Accuracy", y = xlab, title = xlab)
+  return(sp)
+}
+
+sp_als = psych_sp(psych_sum, 'sum_als',"Affective Lability Score (ALS)")
+sp_ari = psych_sp(psych_sum, 'sum_ari',"Affective Reactivity Index (ARI)")
+
+sp_als + sp_ari
+ # show results
+
+
+fit = lm( acc ~ sum_als + sum_ari+ days, data = psych_sum)
+summary(fit)
+```
+**Figure 21: Associations between irritability and prediction accuracy**. 
+
+### 16. Associations with Cognition
+```{r psychopathology, fig.align="center", fig.height=3, fig.width=6, message=FALSE, warning=FALSE}
+cnb_score = read.csv(file.path(project_path,"data/grmpy_bifactor_cnb_cleaned.csv"))
+cor_traits = read.csv(file.path(project_path,"data/grmpy_corrtraits_cnb_cleaned.csv"))
+cnb_beiwe = inner_join(ids,cnb_score, by = c("BBLID" = "bblid"))
+
+```
+
+
+### 17. Associations with Cognition
+```{r psychopathology, fig.align="center", fig.height=3, fig.width=6, message=FALSE, warning=FALSE}
+cnb_score = read.csv(file.path(project_path,"data/grmpy_bifactor_cnb_cleaned.csv"))
+cor_traits = read.csv(file.path(project_path,"data/grmpy_corrtraits_cnb_cleaned.csv"))
+cnb_beiwe = inner_join(ids,cnb_score, by = c("BBLID" = "bblid"))
+
+```
+
+
+
+### 18. Misc Info
 ```{r message=FALSE, warning=FALSE}
 #sessionInfo()
 ```
